--- a/mainmlx42.dSYM/Contents/Resources/Relocations/aarch64/mainmlx42.yml
+++ b/mainmlx42.dSYM/Contents/Resources/Relocations/aarch64/mainmlx42.yml
@@ -2,8 +2,9 @@
 triple:          'arm64-apple-darwin'
 binary-path:     mainmlx42
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _ft_hook, symObjAddr: 0x0, symBinAddr: 0x100003010, symSize: 0x44 }
-  - { offsetInCU: 0x3B, offset: 0x3B, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x200, symBinAddr: 0x100016900, symSize: 0x0 }
-  - { offsetInCU: 0x65, offset: 0x65, size: 0x8, addend: 0x0, symName: _ft_hook, symObjAddr: 0x0, symBinAddr: 0x100003010, symSize: 0x44 }
-  - { offsetInCU: 0x97, offset: 0x97, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x44, symBinAddr: 0x100003054, symSize: 0x120 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _ft_hook, symObjAddr: 0x0, symBinAddr: 0x100002B68, symSize: 0x42C }
+  - { offsetInCU: 0x3B, offset: 0x3B, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x660, symBinAddr: 0x10001BD40, symSize: 0x0 }
+  - { offsetInCU: 0x66, offset: 0x66, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0x6A0, symBinAddr: 0x10001BD80, symSize: 0x0 }
+  - { offsetInCU: 0x45F, offset: 0x45F, size: 0x8, addend: 0x0, symName: _ft_hook, symObjAddr: 0x0, symBinAddr: 0x100002B68, symSize: 0x42C }
+  - { offsetInCU: 0x4A5, offset: 0x4A5, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x42C, symBinAddr: 0x100002F94, symSize: 0x120 }
 ...
