--- a/fdf.dSYM/Contents/Resources/Relocations/aarch64/fdf.yml
+++ b/fdf.dSYM/Contents/Resources/Relocations/aarch64/fdf.yml
@@ -2,22 +2,26 @@
 triple:          'arm64-apple-darwin'
 binary-path:     fdf
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _ft_keyreact, symObjAddr: 0x0, symBinAddr: 0x100003368, symSize: 0x1E0 }
-  - { offsetInCU: 0x3B, offset: 0x3B, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x1700, symBinAddr: 0x100007800, symSize: 0x0 }
-  - { offsetInCU: 0x66, offset: 0x66, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0x1740, symBinAddr: 0x100007840, symSize: 0x0 }
-  - { offsetInCU: 0x83, offset: 0x83, size: 0x8, addend: 0x0, symName: _.str.2, symObjAddr: 0x1780, symBinAddr: 0x100007880, symSize: 0x0 }
-  - { offsetInCU: 0xA0, offset: 0xA0, size: 0x8, addend: 0x0, symName: _.str.3, symObjAddr: 0x17E0, symBinAddr: 0x1000078E0, symSize: 0x0 }
-  - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _.str.4, symObjAddr: 0x1800, symBinAddr: 0x100007900, symSize: 0x0 }
-  - { offsetInCU: 0xDA, offset: 0xDA, size: 0x8, addend: 0x0, symName: _.str.5, symObjAddr: 0x1860, symBinAddr: 0x100007960, symSize: 0x0 }
-  - { offsetInCU: 0x18E, offset: 0x18E, size: 0x8, addend: 0x0, symName: _ft_keyreact, symObjAddr: 0x0, symBinAddr: 0x100003368, symSize: 0x1E0 }
-  - { offsetInCU: 0x1C4, offset: 0x1C4, size: 0x8, addend: 0x0, symName: _ft_abs, symObjAddr: 0x1E0, symBinAddr: 0x100003548, symSize: 0x48 }
-  - { offsetInCU: 0x1EC, offset: 0x1EC, size: 0x8, addend: 0x0, symName: _ft_definepoint, symObjAddr: 0x228, symBinAddr: 0x100003590, symSize: 0x114 }
-  - { offsetInCU: 0x22C, offset: 0x22C, size: 0x8, addend: 0x0, symName: _ft_draw, symObjAddr: 0x33C, symBinAddr: 0x1000036A4, symSize: 0x3EC }
-  - { offsetInCU: 0x279, offset: 0x279, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x728, symBinAddr: 0x100003A90, symSize: 0xF28 }
-  - { offsetInCU: 0x26, offset: 0x341, size: 0x8, addend: 0x0, symName: _ft_direction, symObjAddr: 0x0, symBinAddr: 0x100004A50, symSize: 0x5C8 }
-  - { offsetInCU: 0x3B, offset: 0x356, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x1A80, symBinAddr: 0x1000079C0, symSize: 0x0 }
-  - { offsetInCU: 0x65, offset: 0x380, size: 0x8, addend: 0x0, symName: _ft_direction, symObjAddr: 0x0, symBinAddr: 0x100004A50, symSize: 0x5C8 }
-  - { offsetInCU: 0xA9, offset: 0x3C4, size: 0x8, addend: 0x0, symName: _ft_nextpix, symObjAddr: 0x5C8, symBinAddr: 0x100005018, symSize: 0x658 }
-  - { offsetInCU: 0xF7, offset: 0x412, size: 0x8, addend: 0x0, symName: _ft_putpixel, symObjAddr: 0xC20, symBinAddr: 0x100005670, symSize: 0x44C }
-  - { offsetInCU: 0x153, offset: 0x46E, size: 0x8, addend: 0x0, symName: _ft_bresenham, symObjAddr: 0x106C, symBinAddr: 0x100005ABC, symSize: 0x964 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _ft_keyreact, symObjAddr: 0x0, symBinAddr: 0x100003490, symSize: 0x1E0 }
+  - { offsetInCU: 0x3B, offset: 0x3B, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0xEA0, symBinAddr: 0x1000076E0, symSize: 0x0 }
+  - { offsetInCU: 0x66, offset: 0x66, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0xEE0, symBinAddr: 0x100007720, symSize: 0x0 }
+  - { offsetInCU: 0x83, offset: 0x83, size: 0x8, addend: 0x0, symName: _.str.2, symObjAddr: 0xF20, symBinAddr: 0x100007760, symSize: 0x0 }
+  - { offsetInCU: 0x137, offset: 0x137, size: 0x8, addend: 0x0, symName: _ft_keyreact, symObjAddr: 0x0, symBinAddr: 0x100003490, symSize: 0x1E0 }
+  - { offsetInCU: 0x16D, offset: 0x16D, size: 0x8, addend: 0x0, symName: _ft_abs, symObjAddr: 0x1E0, symBinAddr: 0x100003670, symSize: 0x48 }
+  - { offsetInCU: 0x195, offset: 0x195, size: 0x8, addend: 0x0, symName: _ft_definepoint, symObjAddr: 0x228, symBinAddr: 0x1000036B8, symSize: 0x114 }
+  - { offsetInCU: 0x1D5, offset: 0x1D5, size: 0x8, addend: 0x0, symName: _ft_init_image, symObjAddr: 0x33C, symBinAddr: 0x1000037CC, symSize: 0x55C }
+  - { offsetInCU: 0x1FD, offset: 0x1FD, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x898, symBinAddr: 0x100003D28, symSize: 0x55C }
+  - { offsetInCU: 0x26, offset: 0x2A0, size: 0x8, addend: 0x0, symName: _ft_draw, symObjAddr: 0x0, symBinAddr: 0x10000431C, symSize: 0x5B0 }
+  - { offsetInCU: 0x3B, offset: 0x2B5, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x1F80, symBinAddr: 0x100007780, symSize: 0x0 }
+  - { offsetInCU: 0x65, offset: 0x2DF, size: 0x8, addend: 0x0, symName: _ft_draw, symObjAddr: 0x0, symBinAddr: 0x10000431C, symSize: 0x5B0 }
+  - { offsetInCU: 0xB2, offset: 0x32C, size: 0x8, addend: 0x0, symName: _ft_bresenham, symObjAddr: 0x5B0, symBinAddr: 0x1000048CC, symSize: 0x964 }
+  - { offsetInCU: 0x13B, offset: 0x3B5, size: 0x8, addend: 0x0, symName: _ft_direction, symObjAddr: 0xF14, symBinAddr: 0x100005230, symSize: 0x5C8 }
+  - { offsetInCU: 0x17F, offset: 0x3F9, size: 0x8, addend: 0x0, symName: _ft_nextpix, symObjAddr: 0x14DC, symBinAddr: 0x1000057F8, symSize: 0x658 }
+  - { offsetInCU: 0x1CD, offset: 0x447, size: 0x8, addend: 0x0, symName: _ft_putpixel, symObjAddr: 0x1B34, symBinAddr: 0x100005E50, symSize: 0x3AC }
+  - { offsetInCU: 0x26, offset: 0x5DC, size: 0x8, addend: 0x0, symName: _ft_error_handle, symObjAddr: 0x0, symBinAddr: 0x100006294, symSize: 0xB0 }
+  - { offsetInCU: 0x3B, offset: 0x5F1, size: 0x8, addend: 0x0, symName: _.str, symObjAddr: 0x160, symBinAddr: 0x1000077E0, symSize: 0x0 }
+  - { offsetInCU: 0x66, offset: 0x61C, size: 0x8, addend: 0x0, symName: _.str.1, symObjAddr: 0x1C0, symBinAddr: 0x100007840, symSize: 0x0 }
+  - { offsetInCU: 0x83, offset: 0x639, size: 0x8, addend: 0x0, symName: _.str.2, symObjAddr: 0x200, symBinAddr: 0x100007880, symSize: 0x0 }
+  - { offsetInCU: 0xA0, offset: 0x656, size: 0x8, addend: 0x0, symName: _.str.3, symObjAddr: 0x240, symBinAddr: 0x1000078C0, symSize: 0x0 }
+  - { offsetInCU: 0xA9, offset: 0x65F, size: 0x8, addend: 0x0, symName: _ft_error_handle, symObjAddr: 0x0, symBinAddr: 0x100006294, symSize: 0xB0 }
 ...
